--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,10 @@
 * {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
 }
 
 /* Seu código css aqui */
+body {
+  background: #0f0f0f;
+}
