--- a/src/style.css
+++ b/src/style.css
@@ -8,3 +8,108 @@
 body {
   background: #0f0f0f;
 }
+
+.conteudo {
+  width: 860px;
+  margin: 0 auto;
+}
+
+.horizontal {
+  display: flex;
+  align-items: center;
+}
+
+.canal {
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+
+.canal .logo {
+  height: 80px;
+  width: 80px;
+  border-radius: 40px;
+  margin-right: 16px;
+}
+
+.canal h2 {
+  font: 24px "Roboto", sans-serif;
+  color: #fff;
+}
+.canal span {
+  display: block;
+  margin-top: 8px;
+  font: 14px "Roboto", sans-serif;
+  color: #aaa;
+}
+.canal .botao-membro {
+  color: #3ea6ff;
+  border: 1px solid #3ea6ff;
+  border-radius: 4px;
+  font: 14px "Roboto", sans-serif;
+  text-transform: uppercase;
+  margin-right: 16px;
+  padding: 8px 16px;
+}
+
+.canal .botao-inscrever {
+  color: #fff;
+  border-radius: 4px;
+  background: #c00;
+  font: 14px "Roboto", sans-serif;
+  text-transform: uppercase;
+}
+
+.canal .ícone {
+  height: 18px;
+  width: 18px;
+  margin-left: 8px;
+}
+
+nav {
+  display: block;
+}
+
+header {
+  background: #181818;
+  margin-bottom: 40px;
+  padding: 24px;
+}
+
+nav a {
+  color: #fff;
+  font: 14px "Roboto", sans-serif;
+  text-transform: uppercase;
+  margin-right: 16px;
+}
+
+.destaque iframe {
+  margin-right: 16px;
+}
+
+.destaque .info h3 {
+  font: 14px "Roboto", sans-serif;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.destaque .info span {
+  display: block;
+  font: 13px "Roboto", sans-serif;
+  color: #aaa;
+  margin-bottom: 16px;
+}
+
+.destaque .info p {
+  font: 14px/24px "Roboto", sans-serif;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.destaque .info a {
+  font: 13px "Roboto", sans-serif;
+  color: #aaa;
+  text-transform: uppercase;
+}
+.destaque .info a:hover {
+  color: #fff;
+}
